[Presentation API] return valid WebPresentationConnection object in PresentationReceiver

PresentationReceiver::onReceiverConnectionAvailable() returns nullptr if receiver.connectionList property is not accessed, causing PresentationConnectionProxy holding invalid source_connection_ and may crash render process.

BUG=692629

Review-Url: https://codereview.chromium.org/2706453002
Cr-Commit-Position: refs/heads/master@{#452213}

Former-commit-id: 00db1bcf1a71b903e3a03ce5e277c4d5d1b49a88